fix: autohide controls, CSS styles for audio ads and minor fixes
- Added conditional to avoid autohiding controls when media is paused or ended
- Adjusted CSS styles for control bar to avoid conflicts between ads media
- Removed adjustment for ads countdown not showing the proper UI
- Added element in ads sanitizer to increase security when treating all executable or dangerous schemes
- Updated CONTRIBUTING guidelines to be more in tune with new version

--- a/packages/player/src/style.css
+++ b/packages/player/src/style.css
@@ -198,7 +198,7 @@
 
 .op-player__audio .op-controls {
     background: transparent;
-    position: static;
+    position: relative;
 }
 
 .op-controls--hidden .op-controls {
